// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component Programme within Layout match to snapshot in English 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-labelledby="kth-local-navigation-title--mobile"
      class="kth-local-navigation--mobile"
    >
      <button
        class="kth-button menu"
        id="kth-local-navigation-title--mobile"
      >
        <span>
          Degree Programme in Architecture
        </span>
      </button>
      <dialog
        class="kth-mobile-menu left"
      >
        <div
          class="kth-mobile-menu__navigation"
        >
          <button
            class="kth-icon-button close"
          >
            <span
              class="kth-visually-hidden"
            >
              Close
            </span>
          </button>
        </div>
        <div
          class="mobile-menu__content"
        >
          <a
            class="kth-button back"
            href="/student/kurser?l=en"
          >
            Course and programme directory
          </a>
          <span>
            Degree Programme in Architecture
          </span>
          <ul>
            <li>
              <a
                aria-current="page"
              >
                Programme Syllabuses
              </a>
            </li>
          </ul>
        </div>
      </dialog>
    </nav>
    <nav
      aria-labelledby="local-navigation-title"
      class="kth-local-navigation col"
      id="mainMenu"
    >
      <a
        class="kth-button back"
        href="/student/kurser?l=en"
      >
        Course and programme directory
      </a>
      <h2
        id="local-navigation-title"
      >
        Degree Programme in Architecture
      </h2>
      <ul>
        <li>
          <a
            aria-current="page"
          >
            Programme Syllabuses
          </a>
        </li>
      </ul>
    </nav>
    <main
      class="col"
      id="mainContent"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <header
            role="presentation"
          >
            <h1
              aria-labelledby="page-heading page-sub-heading"
              id="page-heading"
            >
              Programme Syllabuses
            </h1>
            <p
              aria-hidden="true"
              class="page-sub-heading"
              id="page-sub-heading"
            >
              Degree Programme in Architecture (ARKIT)
            </p>
          </header>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <article
            class="article "
          >
            <p>
              Choose programme syllabus. Each year group within a programme has its own programme syllabus. The programme syllabus contains, among other things, information about which courses are included in the programme. 
            </p>
            <ul
              class="link-list"
            >
              <li>
                <a
                  href="/student/kurser/program/ARKIT/20192/arskurs2?l=en"
                >
                  Programme syllabus for studies starting in Autumn 19
                </a>
              </li>
              <li>
                <a
                  href="/student/kurser/program/ARKIT/20211/arskurs1?l=en"
                >
                  Programme syllabus for studies starting in Spring 21
                </a>
              </li>
            </ul>
          </article>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <footer
            class="border-top mt-4 pt-1"
            id="articleFooter"
          >
            <address>
              Contact for questions regarding education at KTH: 
              <a
                href="https://www.kth.se/en/studies/master/general-study-counselling-1.621634"
              >
                Central study counseling
              </a>
              <br />
              Contact regarding technical matters on this page: 
              <a
                href="mailto:kopps@kth.se"
              >
                kopps@kth.se
              </a>
            </address>
          </footer>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`Render component Programme within Layout match to snapshot in Swedish 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-labelledby="kth-local-navigation-title--mobile"
      class="kth-local-navigation--mobile"
    >
      <button
        class="kth-button menu"
        id="kth-local-navigation-title--mobile"
      >
        <span>
          Arkitektutbildning
        </span>
      </button>
      <dialog
        class="kth-mobile-menu left"
      >
        <div
          class="kth-mobile-menu__navigation"
        >
          <button
            class="kth-icon-button close"
          >
            <span
              class="kth-visually-hidden"
            >
              Close
            </span>
          </button>
        </div>
        <div
          class="mobile-menu__content"
        >
          <a
            class="kth-button back"
            href="/student/kurser"
          >
            Kurs- och programkatalogen
          </a>
          <span>
            Arkitektutbildning
          </span>
          <ul>
            <li>
              <a
                aria-current="page"
              >
                Utbildningsplaner
              </a>
            </li>
          </ul>
        </div>
      </dialog>
    </nav>
    <nav
      aria-labelledby="local-navigation-title"
      class="kth-local-navigation col"
      id="mainMenu"
    >
      <a
        class="kth-button back"
        href="/student/kurser"
      >
        Kurs- och programkatalogen
      </a>
      <h2
        id="local-navigation-title"
      >
        Arkitektutbildning
      </h2>
      <ul>
        <li>
          <a
            aria-current="page"
          >
            Utbildningsplaner
          </a>
        </li>
      </ul>
    </nav>
    <main
      class="col"
      id="mainContent"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <header
            role="presentation"
          >
            <h1
              aria-labelledby="page-heading page-sub-heading"
              id="page-heading"
            >
              Utbildningsplaner
            </h1>
            <p
              aria-hidden="true"
              class="page-sub-heading"
              id="page-sub-heading"
            >
              Arkitektutbildning (ARKIT)
            </p>
          </header>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <article
            class="article "
          >
            <p>
              Välj utbildningsplan. Varje årskull inom ett program har en egen utbildningsplan. I utbildningsplanen finns information om bland annat vilka kurser som ingår i programmet. 
            </p>
            <ul
              class="link-list"
            >
              <li>
                <a
                  href="/student/kurser/program/ARKIT/20192/arskurs2"
                >
                  Utbildningsplan kull HT19
                </a>
              </li>
              <li>
                <a
                  href="/student/kurser/program/ARKIT/20211/arskurs1"
                >
                  Utbildningsplan kull VT21
                </a>
              </li>
            </ul>
          </article>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <footer
            class="border-top mt-4 pt-1"
            id="articleFooter"
          >
            <address>
              Kontakt för frågor om utbildning på KTH: 
              <a
                href="https://www.kth.se/studievagledning"
              >
                Central studievägledning
              </a>
              <br />
              Teknisk kontakt om denna sida: 
              <a
                href="mailto:kopps@kth.se"
              >
                kopps@kth.se
              </a>
            </address>
          </footer>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
